Fix right hand side whitespace on mobile devices

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -901,3 +901,6 @@ img[src*='#cc-center'] {
     margin: 1.75rem auto;
   }
 }
+html {
+  overflow-x: hidden;
+}
